--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,7 @@ version 3.5 (milestone)
 * clock module: add %s, %T for time_delta calculation, by @ShareDVI
 * clock module: use helpers, by @lasers
 * diskdata module: use helpers, by @lasers
+* diskdata module: fix stats for fs mounted multiple times by @eturner
 * dpms module: add button_off, button_toggle, cache_timeout by @lasers
 * dropbox: use helpers and format fix, by @lasers
 * external_script module: fix exception, remove warning, by @lasers
@@ -29,6 +30,7 @@ version 3.5 (milestone)
 * gpmdp module: use helpers, by @lasers
 * hamster module: use helpers, by @lasers
 * imap module: add depreciation stuffs, by @lasers
+* imap: allow_urgent on unread messages, by @lasers
 * insync module: fix exception, by @lasers
 * insync module: use helpers, by @lasers
 * keyboard_layout module: use helpers, by @lasers
@@ -36,6 +38,7 @@ version 3.5 (milestone)
 * mpris module: use helpers, by @lasers
 * net_iplist module: use helpers, by @lasers
 * nvidia_temp module: use helpers, by @lasers
+* nvidia_temp module: fix exception. by @lasers
 * pomodoro module: use helpers, by @lasers
 * process_status module: add format, use helpers, by @lasers
 * selinux module: fix exception, remove hardcoded strings, by @lasers
